# llamaAtLocal

./: .gitignore  CMakeLists.txt  llama.cpp  llama_server.cpp  llama_server.h  main.cpp  web_search.cpp  web_search.h
src/: HttpClient.h  LlamaChat.cpp  LlamaChat.h  TerminalUI.cpp  TerminalUI.h  main.cpp
